# crypto-trading-arena

./: .gitignore  CLI_REFERENCE.md  README.md  binance_kafka_connector.py  coinbase_kafka_connector.py  config.example.json  config.py  config.schema.json  data_recorder.py  pyproject.toml  requirements.txt  start_arena.py  start_arena.sh  tools_and_dashboard.py  trading_tools.py
.claude/: settings.local.json
arena/: account_store.py  dashboard.py  models.py  price_book.py  recorder.py  strategies.py  tools.py
deploy/: chat_node.py  response_viewer.py  router_node.py  tools_and_dashboard.py
docs/: CLI_REFERENCE.md  csv-data-recording.md
exchanges/: __init__.py  binance.py  coinbase.py
tests/: conftest.py  test_arena.py
